--- a/src/main/webapp/user/editWhiteboard.xhtml
+++ b/src/main/webapp/user/editWhiteboard.xhtml
@@ -50,26 +50,29 @@
         </h:form>
 
         <h:form>
-            <table border="0" cellspacing="5" width="100%">
+            <div align="center">
+                <table border="0" cellspacing="5" width="60%">
 
-                <tbody>
-                    <tr>
-                        <td>
-                            Users Editing:
-                        </td>
-                        <td>
-                            <h:commandButton value="Edit"/>
-                        </td>
+                    <tbody>
+                        <tr>
+                            <td align="left">
+                                Users Editing:
+                            </td>
+                            <td align="left">
+                                <h:commandButton value="Edit"/>
+                            </td>
 
-                        <td >
-                            Users Aborting:
-                        </td>
-                        <td>
-                            <h:commandButton value="Abort"/>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            <td align="right" >
+                                Users Aborting:
+                            </td>
+                            <td align="right">
+                                <h:commandButton value="Abort"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
 
 
 
