--- a/src/main/webapp/user/editWhiteboard.xhtml
+++ b/src/main/webapp/user/editWhiteboard.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <title>Edit Whiteboard</title>
@@ -25,12 +26,12 @@
                             <h:link style="color: black" outcome="whiteboardList" value="See My Saved Whiteboards" />
                         </td>
                         <td width="25%" align="right">
-                            <h:outputLabel style="color: black" rendered="#{userController.logged}" value="Welcome: #{userController.userName()}"/>
+                            <h:outputLabel style="color: black" rendered="#{userController.seeIfLogged()}" value="Welcome: #{userController.userName()}"/>
 
                         </td>
                         <td width="20%" align="right">
 
-                            <h:commandLink style="color: black" rendered="#{userController.logged}" action="#{logoutBean.logout()}" value="Logout" />
+                            <h:commandLink style="color: black" rendered="#{userController.seeIfLogged()}" action="#{logoutBean.logout()}" value="Logout" />
                         </td>
                     </tr>
                 </tbody>
@@ -56,14 +57,24 @@
                     <tbody>
                         <tr>
                             <td align="left">
-                                Users Editing:
+                                Users Editing: &nbsp;<span id="ed"></span>
                             </td>
 
                             <td align="right" >
-                                Users Aborting:
+                                Users Aborting:&nbsp; <span id="ab"></span>
                             </td>
                             <td align="right">
-                                <input type="checkbox" id="instant" value="Online" checked="false">Abort
+
+                                <p:selectOneRadio id="options" value="#{whiteboardController.abort}">
+
+                                    <f:selectItem itemLabel="Edit"  itemValue="false" />
+                                    <f:selectItem itemLabel="Abort" itemValue="true" />
+
+                                    <p:ajax event="valueChange" process="@form" update=":inputForm"/>
+
+
+                                </p:selectOneRadio>
+
                             </td>
                         </tr>
                     </tbody>
@@ -83,50 +94,57 @@
         </div>
 
 
-        <form name="inputForm">
-
-            <div align="center">
-                <table cellspacing="5" width="60%">
-
-                    <tr>
-                        <th>Color:</th>
-                        <td><input type="radio" name="color" value="#FF0000" checked="true"/>Red</td>
-                        <td><input type="radio" name="color" value="#0000FF"/>Blue</td>
-                        <td><input type="radio" name="color" value="#FF9900"/>Orange</td>
-                        <td><input type="radio" name="color" value="#33CC33"/>Green</td>
-                    </tr>
-
-                    <br/>
-                    <tr>
-                        <th>Shape:</th>
-                        <td><input type="radio" name="shape" value="square" checked="true"/>Square</td>
-                        <td><input type="radio" name="shape" value="circle"/>Circle</td>
-
-                        <td>
-                        </td>
-                        <td> </td>
-                    </tr>
-
-
-                </table>
+        <h:form  id="inputForm">
+            <h:form rendered="#{!whiteboardController.abort}">
 
 
 
-            </div>
+                <div align="center">
+                    <table cellspacing="5" width="60%">
 
-            <div align="center">
+                        <tr>
+                            <th>Color:</th>
+                            <td><input type="radio" name="color" value="#FF0000" checked="true"/>Red</td>
+                            <td><input type="radio" name="color" value="#0000FF"/>Blue</td>
+                            <td><input type="radio" name="color" value="#FF9900"/>Orange</td>
+                            <td><input type="radio" name="color" value="#33CC33"/>Green</td>
+                        </tr>
 
-                <input type="submit" value="Save" onclick="defineImageBinary();
-                        return false;"/>
+                        <br/>
+                        <tr>
+                            <th>Shape:</th>
+                            <td><input type="radio" name="shape" value="square" checked="true"/>Square</td>
+                            <td><input type="radio" name="shape" value="circle"/>Circle</td>
+
+                            <td>
+                            </td>
+                            <td> </td>
+                        </tr>
+
+
+                    </table>
 
 
 
-            </div>
+                </div>
 
-            <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/resources/javaScript/websocket.js"></script>
-            <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/resources/javaScript/whiteboard.js"></script>
+            </h:form>
 
-        </form>
+        </h:form>
+
+        <div align="center">
+
+            <input type="submit" value="Save" onclick="defineImageBinary();
+                    return false;"/>
+
+
+
+        </div>
+
+        <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/resources/javaScript/websocket.js"></script>
+        <script type="text/javascript" src="#{facesContext.externalContext.requestContextPath}/resources/javaScript/whiteboard.js"></script>
+
+
 
 
 
