--- a/src/main/webapp/user/whiteboardList.xhtml
+++ b/src/main/webapp/user/whiteboardList.xhtml
@@ -23,12 +23,12 @@
                             <h:link style="color: black" outcome="whiteboardList" value="See My Saved Whiteboards" />
                         </td>
                         <td width="25%" align="right">
-                            <h:outputLabel style="color: black" rendered="#{userController.logged}" value="Welcome: #{userController.userName()}"/>
+                            <h:outputLabel style="color: black" rendered="#{userController.seeIfLogged()}" value="Welcome: #{userController.userName()}"/>
 
                         </td>
                         <td width="20%" align="right">
 
-                            <h:commandLink style="color: black" rendered="#{userController.logged}" action="#{logoutBean.logout()}" value="Logout" />
+                            <h:commandLink style="color: black" rendered="#{userController.seeIfLogged()}" action="#{logoutBean.logout()}" value="Logout" />
                         </td>
                     </tr>
                 </tbody>
