falta mostrar a imagem mas eu ja sei como é, amanha de tarde faço isso tenta ver o que consegues fazer n apresentação mas não é preciso grande coisa. não somo designers

--- a/src/main/webapp/user/editWhiteboard.xhtml
+++ b/src/main/webapp/user/editWhiteboard.xhtml
@@ -133,11 +133,12 @@
         </h:form>
 
         <div align="center">
+            <h:form>
+                Insert Name: <input id="name"></input>
+                <p:commandButton value="Save" onclick="saveImage();"
+                                 action="#{whiteboardController.updateList()}"/>
 
-            <input type="submit" value="Save" onclick="defineImageBinary();
-                    return false;"/>
-
-
+            </h:form>
 
         </div>
 
