--- a/src/main/webapp/user/whiteboardList.xhtml
+++ b/src/main/webapp/user/whiteboardList.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
@@ -39,12 +40,39 @@
             <br/>
 
             <div align="center">
-                <h1>My Witeboard List</h1>
+                <h1>My Whiteboard List</h1>
             </div>
 
         </h:form>
 
-        <p:dataTable>
+        <p:dataTable id="whiteboardList" var="whiteboard" value="#{whiteboardController.whiteList}"
+                     paginator="true" rows="10" paginatorPosition="bottom"
+                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                     rowsPerPageTemplate="5,10,15" sortBy="name">
+
+
+
+            <p:column headerText="Nome" sortBy="name">
+                #{whiteboard.name}
+            </p:column>
+
+            <p:column headerText="Data" sortBy="saveDate">
+                #{whiteboard.saveDate}
+            </p:column>
+
+            <p:column>
+                <h:form>
+                    <p:commandButton oncomplete="PF('wb').show()" icon="ui-icon-search" title="View">
+                        <f:setPropertyActionListener value="#{whiteboard}" target="#{whiteboardController.selectedW}" />
+                    </p:commandButton>
+                </h:form>
+            </p:column>
+
+            <h:form id="dialogForm">
+                <p:dialog widgetVar="wb" header="#{whiteboardController.selectedW.name}" modal="true" showEffect="fade" hideEffect="fade" resizable="false" width="600" height="300">
+
+                </p:dialog>
+            </h:form>
 
 
         </p:dataTable>
