--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -6,7 +6,16 @@
     <h:head>
         <title>Login</title>
     </h:head>
-    <h:body>
+    <h:body style="background-color: lightgrey">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
         <p:panel header="Login From">
             <form method="POST" action="j_security_check">
                 Email: <input type="text" name="j_username" />
