--- a/src/main/webapp/user/whiteboardList.xhtml
+++ b/src/main/webapp/user/whiteboardList.xhtml
@@ -5,31 +5,50 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Whiteboard List</title>
     </h:head>
-    <h:body style="background-color: lightgray">
+    <h:body style="background-image: url('../resources/images/good-desktop.jpg')">
         <h:form>
 
-            <table border="0" cellspacing="10" width="100%">
+            <table style="background-color: white" border="0" cellspacing="10" width="100%">
 
                 <tbody>
                     <tr>
-                        <td width="10%" align="left">
-                            <h:link style="color: black" outcome="/index" value="Back" />
+                        <td width="10%" align="center">
+                            <h:link style="color: black" outcome="/index" title="Home">
+
+                                <img src="../resources/images/home.png" width="32" height="32" alt="home"/>
+
+                            </h:link>
                         </td>
-                        <td width="20%" align="left">
-                            <h:link style="color: black" outcome="editWhiteboard" value="Edit Whiteboard" />
-                        </td>
-                        <td width="25%" align="left">
-                            <h:link style="color: black" outcome="whiteboardList" value="See My Saved Whiteboards" />
-                        </td>
-                        <td width="25%" align="right">
-                            <h:outputLabel style="color: black" rendered="#{userController.seeIfLogged()}" value="Welcome: #{userController.userName()}"/>
+                        <td width="10%" align="center">
+                            <h:link style="color: black" outcome="editWhiteboard" title="Edit Whiteboard">
+                                <img src="../resources/images/edit.png" width="32" height="32" alt="edit"/>
+
+
+                            </h:link>
 
                         </td>
-                        <td width="20%" align="right">
+                        <td width="10%" align="center">
+                            <h:link style="color: black" outcome="whiteboardList" title="See My Saved Whiteboards" >
+                                <img src="../resources/images/list.png" width="32" height="32" alt="list"/>
 
-                            <h:commandLink style="color: black" rendered="#{userController.seeIfLogged()}" action="#{logoutBean.logout()}" value="Logout" />
+
+                            </h:link>
+
+                        </td>
+                        <td width="60%" align="right">
+                            <h3><h:outputLabel style="color: black" rendered="#{userController.seeIfLogged()}" value="Welcome: #{userController.userName()}"/></h3>
+
+                        </td>
+                        <td width="10%" align="center">
+
+                            <h:commandLink style="color: black" rendered="#{userController.seeIfLogged()}" action="#{logoutBean.logout()}" title="Logout" >
+
+                                <img src="../resources/images/Off.png" width="32" height="32" alt="Off"/>
+
+
+                            </h:commandLink>
                         </td>
                     </tr>
                 </tbody>
@@ -38,9 +57,9 @@
 
             <br/>
             <br/>
-
+            <br/>
             <div align="center">
-                <h1>My Whiteboard List</h1>
+                <h1 style="color: white">My Whiteboard List</h1>
             </div>
 
         </h:form>
@@ -50,8 +69,6 @@
             <p:growl id="message" showDetail="true" />
 
             <p:dataTable id="whiteboardList" var="whiteboard" value="#{whiteboardController.whiteList}"
-                         rowKey="#{whiteboard.id}"
-                         selection="#{whiteboardController.selectedW}"
                          paginator="true" rows="10" paginatorPosition="bottom"
                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          rowsPerPageTemplate="5,10,15" sortBy="name">
@@ -77,20 +94,25 @@
                 </p:column>
 
                 <p:column headerText="Delete">
-                    <p:commandButton ajax="true" action="#{whiteboardController.deleteWhiteboard(whiteboard.id)}"
+                    <p:commandButton ajax="true" oncomplete="PF('conf').show()"
                                      id="deleteButton" icon="ui-icon ui-icon-close">
-                        <p:confirm header="Delete" message="Are you sure?" icon="ui-icon-alert" />
+
+                        <f:setPropertyActionListener value="#{whiteboard}" target="#{whiteboardController.selectedW}"/>
                     </p:commandButton>
+
+
 
                 </p:column>
 
             </p:dataTable>
 
 
-            <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
-                <p:commandButton update=":wList" value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-            </p:confirmDialog>
+            <p:dialog modal="true" header="Are you sure?" widgetVar="conf"  showEffect="fade" hideEffect="explode">
+                <p:commandButton action="#{whiteboardController.deleteWhiteboard()}" ajax="false"
+                                 update=":wList" value="Yes" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"
+                                 oncomplete="conf.hide();"/>
+                <p:commandButton ajax="false" value="No" oncomplete="conf.hide();" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+            </p:dialog>
 
         </h:form>
 
